<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="defualtPromoCount">30</string>
    <string name="app_name">Avis.help</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="homeTitle">Home</string>
    <string name="authRevieTitle">Authorized reviews</string>
    <string name="anonRevieTitle">Anonymous reviews</string>
    <string name="forgotPass">Forgot password?</string>
    <string name="loginButton">Log in</string>
    <string name="mainDescriotionOfApp">Customer communication platform</string>
    <string name="internet_connection">No internet connection</string>
    <string name="fromButton">From:</string>
    <string name="toButton">To:</string>
    <string name="selectYourBranchTitle">Select your branch</string>
    <string name="todayButton">Today</string>
    <string name="weekButton">Week</string>
    <string name="monthButton">Month</string>
    <string name="totalReviwTitle">Reviews</string>
    <string name="totalConversationTitle">Chats</string>
    <string name="overalRatingTitle">Overall rating</string>
    <string name="statsTitle">Your stats</string>
    <string name="tvChart">No data for the selected period</string>
    <string name="detailsTitle">Details</string>
    <string name="reviewIdTitle">Review #</string>
    <string name="createdTitle">Created</string>
    <string name="viewedTitle">Viewed</string>
    <string name="answeredTitle">Answered</string>
    <string name="answeredItem">Answered</string>
    <string name="unansweredItem">Unanswered</string>
    <string name="vieweddItem">Viewed</string>
    <string name="unviewedItem">Unviewed</string>
    <string name="createdReviewTitle">Created at</string>
    <string name="viwedReviwedTitle">Viewed </string>
    <string name="branchRevieTitle">Branch:</string>
    <string name="qrRevieTitle">QR-code</string>
    <string name="impressionRevieTitle">General impression</string>
    <string name="telephoneReviewTitle">Telephone:</string>
    <string name="commentRevieTitle">Comment</string>
    <string name="photoRevieTitle">Photo</string>
    <string name="executionReviewTitle">Execution status</string>
    <string name="newRevieTitle">New</string>
    <string name="inProgressRevieTitle">In Progress</string>
    <string name="closedRevieTitle">Closed</string>
    <string name="addCommentRevieTitle">Add comment</string>
    <string name="goToConversationButton">Go to conversation</string>
    <string name="goConversationTitle">Conversations</string>
    <string name="goAuthRevieTitle">Authorized reviews</string>
    <string name="goAnonRevieTitle">Anonymous reviews</string>
    <string name="goToRevieTitle">Go to review</string>
    <string name="profileTitle">Profile</string>
    <string name="noNumberTitle">No</string>
    <string name="addAvatarButton">Add photo</string>
    <string name="saveButton">Save</string>
    <string name="btnSaveName">Save name</string>
    <string name="logoutButton"><u>SIGN OUT</u></string>
    <string name="avatarHint">JPG and PNG only, at least 400x400 pixels</string>
    <string name="emailTitle">Email</string>
    <string name="currentPassTitle">Current password*</string>
    <string name="nameTitle">Name</string>
    <string name="surnameTitle">Surname</string>
    <string name="telephoneNumberTitle">Telephone: </string>
    <string name="enterCompanyName">Enter company name</string>
    <string name="companyTitle">Company</string>
    <string name="branchesTitle">Branches</string>
    <string name="btnAddBranch">ADD A BRANCH +</string>
    <string name="addBranchButtonG">Add a branch</string>
    <string name="addBranchButton"><u>Add a branch +</u></string>
    <string name="addBranchButtonH"><u>Add a branch -</u></string>
    <string name="yourBranchTitle">Your branch</string>
    <string name="generalQrCompanyName">General</string>
    <string name="cleannessQrCompanyName">Cleanliness</string>
    <string name="serviceQrCompanyName">Service</string>
    <string name="downloadButtonCompanyName">Download</string>
    <string name="createBranchName">Enter Branch name</string>
    <string name="createAddressName">Enter Branch address</string>
    <string name="createContactName">Contact person</string>
    <string name="createPhoneName">Enter contact number</string>
    <string name="menuHome">Home</string>
    <string name="menuReview">Reviews</string>
    <string name="menuAnonRev">Anonymous reviews</string>
    <string name="menuChats">Conversations</string>
    <string name="menuCompany">Company</string>
    <string name="menuPromoCodes">Promo codes</string>
    <string name="menuProfile">Profile</string>
    <string name="menuBilling">Billing</string>
    <string name="menuSettings">Settings</string>
    <string name="promoCodeTitle">Promo codes</string>
    <string name="createPromoTitle">Create a new promo code</string>
    <string name="namePromoHint">Create a name</string>
    <string name="descriptionNameHint">Create a description.</string>
    <string name="validPromoTitle">Valid for</string>
    <string name="daysTitle">days</string>
    <string name="addIconPromoButton">Add an icon</string>
    <string name="chooseIconPromoButton">Choose your icon</string>
    <string name="existPromoTitle">Your promo codes</string>
    <string name="languageTitle">Language</string>
    <string name="notificationsTitle">Notifications</string>
    <string name="team">Team</string>
    <string name="urgent_action_required">Urgent action required</string>
    <string name="tvPressTheButton">Press button\nwhen you have fixed the issue</string>
    <string name="btnDone">DONE</string>
    <string name="menuQRManager">QR manager</string>
    <string name="termsConditions">Terms and conditions</string>
    <string name="surveyTitle">Survey</string>
    <string name="opinionTitle">Opinion</string>
    <string name="landingPageTitle">Landing page</string>
    <string name="callToActionTitle">Call to action</string>
    <string name="selectQrType">Select a QR type</string>
    <string name="absolutely_sure">ARE YOU ABSOLUTELY SURE?</string>
    <string name="action_cannot_be_undone">This action CANNOT be undone.\nThis will permanently delete</string>
    <string name="type_word_delete">Please type below DELETE to confirm</string>
    <string name="usage_of_the_app">Usage of the app</string>
    <string name="usage_of_the_app_text">The app avis.help allows you to upload your own materials for personal non-commercial use, provided that you retain all copyright information and other information about the ownership of the source materials and any copies thereof. You may not modify the materials on this App, or distribute or display them in any way, or use them in any other way for public or commercial purposes.Any use of these materials on other apps or on computer networks is prohibited.</string>
    <string name="denial_of_responsibility">Denial of responsibility</string>
    <string name="denial_of_responsibility_app">The materials and services of this app are provided \'as is\' without any warranty by the users themselves. We do not guarantee the accuracy and completeness of materials, images and comments. We may make changes to the materials and services provided on this app at any time without notice. In the case of obsolescence of materials and services on this app - we are not obliged to update them. We are not under any circumstances liable for any damages (including but not limited to damages from loss of profits, data or business interruption) arising from the use, inability to use or the results of using this app.</string>
    <string name="posting_messages_on_the_app">Posting messages on the app</string>
    <string name="posting_messages_on_the_app_text">By contacting us or leaving a content on the app, you are responsible for the fact that such a content is legal, non-dangerous, is not a threat, does not bear the nature of slander, does not contradict ethics, does not violate copyright, does not encourage hatred and / or discrimination against people on racial, ethnic, sexual, religious or social grounds, does not contain insults against certain individuals or organizations and does not violate in any other way the current legislation of the EU and the USA and / or other countries within which the materials and services of this app are available. We are not responsible for any information posted by other users of the app. Leaving a review from 9:00 am to 9:00 pm with confirmation of your mobile phone number, you agree to receive an answer by SMS in the present time period.</string>
    <string name="feedback_and_comments">Feedback and comments</string>
    <string name="feedback_and_comments_text">Addressing us or leaving a content on the app, you are responsible that the content is not illegal, harmful, threatening, slanderous, offends morality, violates copyrights, promotes hatred and / or discrimination of people for racial, ethnic, sexual, religious, social featured, contains insults to specific individuals or organizations, as well as in any other way violates the current legislation of the EU countries and the USA and / or other countries in whose territory the mat Series and services of this app. You agree that any of your messages can be deleted without your consent, as well as left unanswered without explanation. We are not responsible for any other information posted by other users of the app. Leaving a review from 9:00 am to 9:00 pm and confirming your mobile phone number, you consent to feedback from you, in a given period of time, via SMS.</string>
    <string name="use_of_personal_data">Use of personal data</string>
    <string name="use_of_personal_data_text">By using our product, you agree to the use of your data in accordance with the current laws of the EU countries (RGPD 2018) and the United States and / or other countries on whose territory the materials and services of this app are available. We collect the following personal data: name; surname; phone number; a photo. We do not collect personal information other than that necessary for the purpose of providing and improving our products / services. We do not sell personal user data, and use the information we collect solely to provide and improve our products and services. We share your personal data with our suppliers / customers. We conclude agreements on confidentiality and data processing with each of our suppliers / customers to ensure that they adhere to a high level of confidentiality and effective methods, standards of privacy and security. For more information on how our suppliers / customers or their end customers use the information they collect using our products and services, you can refer to their specific privacy policy or contact such company directly.</string>
    <string name="data_storage">Data storage</string>
    <string name="data_storage_text">We store your personal data as long as they are necessary for the purposes for which they were originally collected, or for a period established by applicable law. For information on the storage policies of our suppliers / customers or their end customers, contact the appropriate company.</string>
    <string name="menuCTA">CTA</string>
</resources>