<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/home"
            android:title="@string/menuHome" />
    </group>

    <group android:id="@+id/group2">
        <item
            android:id="@+id/review"
            android:title="@string/menuReview"
            app:actionLayout="@layout/menu_counter"
            app:actionViewClass="android.widget.TextView" />
    </group>

    <group android:id="@+id/group3">
        <item
            android:id="@+id/conversations"
            android:title="@string/menuChats"
            app:actionLayout="@layout/menu_counter"
            app:actionViewClass="android.widget.TextView" />
    </group>

    <group android:id="@+id/group4">
        <item
            android:id="@+id/cta"
            android:title="@string/menuCTA" />
    </group>

    <group android:id="@+id/group5">
        <item
            android:id="@+id/company"
            android:title="@string/menuCompany" />
    </group>

    <group android:id="@+id/group6">
        <item
            android:id="@+id/qrManager"
            android:title="@string/menuQRManager" />
    </group>

    <group android:id="@+id/group7">
        <item
            android:id="@+id/team"
            android:title="@string/team" />
    </group>

    <group android:id="@+id/group8">
        <item
            android:id="@+id/promoCodes"
            android:title="@string/menuPromoCodes" />
    </group>

    <group android:id="@+id/group9">
        <item
            android:id="@+id/billing"
            android:title="@string/menuBilling" />
    </group>

    <group android:id="@+id/group10">
        <item
            android:id="@+id/settings"
            android:title="@string/menuSettings" />
    </group>

    <group android:id="@+id/group11">
        <item
            android:id="@+id/sign_out"
            android:title="@string/logoutButton" />
    </group>

</menu>