<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/selectQrType"
        android:textSize="16sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpinion"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="start|center_vertical"
        android:layoutDirection="rtl"
        android:text="@string/opinionTitle"
        android:textAllCaps="false"
        android:textColor="@color/colorDark"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:icon="@drawable/right_arrow"
        app:iconTint="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLandingPage"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="start|center_vertical"
        android:layoutDirection="rtl"
        android:text="@string/landingPageTitle"
        android:textAllCaps="false"
        android:textColor="@color/colorDark"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:icon="@drawable/right_arrow"
        app:iconTint="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSurvey"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:gravity="start|center_vertical"
        android:layoutDirection="rtl"
        android:text="@string/surveyTitle"
        android:textAllCaps="false"
        android:textColor="@color/colorDark"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:icon="@drawable/right_arrow"
        app:iconTint="@color/colorPrimary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCallToAction"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp"
        android:gravity="start|center_vertical"
        android:layoutDirection="rtl"
        android:text="@string/callToActionTitle"
        android:textAllCaps="false"
        android:textColor="@color/colorDark"
        android:textSize="17sp"
        app:backgroundTint="@null"
        app:cornerRadius="8dp"
        app:icon="@drawable/right_arrow"
        app:iconTint="@color/colorPrimary" />

</LinearLayout>