<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvAttention"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/urgent_action_required"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvQR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvAttention"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="QR Name 1"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvTask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvQR"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="No paper"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvPressTheButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTask"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tvPressTheButton"
        android:textColor="@color/colorAccent"
        android:textSize="15sp" />

    <com.dagang.library.GradientButton
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/tvPressTheButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:button_end_color="@color/colorPrimary"
        app:button_is_shadowed="false"
        app:button_press_end_color="#F38585"
        app:button_press_start_color="#F38585"
        app:button_radius="50dp"
        app:button_size="8dp"
        app:button_start_color="@color/colorPrimary"
        app:button_text="@string/btnDone"
        app:button_text_color="@android:color/white" />

</RelativeLayout>