<?xml version="1.0" encoding="utf-8"?><!--ПОПРОБОВАТЬ СДЕЛАТЬ РОДИТЕЛЬСКИМ КЛАССОМ MaterialCardView,
ЧТОБЫ МОЖНО БЫЛО СДЕЛАТЬ ЗКРУГЛЁННЫЕ УГЛЫ-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDismissDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layoutDirection="rtl"
        android:stateListAnimator="@null"
        app:backgroundTint="@null"
        app:icon="@drawable/ic_close_black_24dp"
        app:iconTint="@color/colorPrimary" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/absolutely_sure"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDeletingText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:gravity="center"
        android:text="@string/action_cannot_be_undone"
        android:textColor="@color/colorDark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/type_word_delete"
        android:textColor="@color/colorDark"
        android:textSize="16sp" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="9dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/deleteInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:padding="14dp"
            android:singleLine="true"
            android:inputType="textCapCharacters"
            android:textCursorDrawable="@drawable/edit_text_cursor_color"
            android:textSize="14sp"
            tools:text="delete" />

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirmDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stateListAnimator="@null"
        android:text="OK"
        android:textColor="@color/colorDark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@null" />

</LinearLayout>