<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_gravity="start"
    android:layout_marginStart="0dp"
    android:layout_marginTop="0dp"
    android:background="@android:color/white"
    android:focusableInTouchMode="true">

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nvViewSettings"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorAccent"
        app:itemTextColor="@color/colorPrimaryDark"
        app:menu="@menu/drawer_menu" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.settings_activity.SettingsActivity">

        <include
            android:id="@+id/appbar_back"
            layout="@layout/appbar"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appbar_back"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLanguage"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:gravity="start|center_vertical"
                android:layoutDirection="rtl"
                android:text="@string/languageTitle"
                android:textAllCaps="false"
                android:textColor="@color/colorDark"
                android:textSize="17sp"
                app:backgroundTint="@null"
                app:cornerRadius="8dp"
                app:icon="@drawable/right_arrow"
                app:iconTint="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnNotifications"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="start|center_vertical"
                android:layoutDirection="rtl"
                android:text="@string/notificationsTitle"
                android:textAllCaps="false"
                android:textColor="@color/colorDark"
                android:textSize="17sp"
                app:backgroundTint="@null"
                app:cornerRadius="8dp"
                app:icon="@drawable/right_arrow"
                app:iconTint="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTermsConditions"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:gravity="start|center_vertical"
                android:layoutDirection="rtl"
                android:text="@string/termsConditions"
                android:textAllCaps="false"
                android:textColor="@color/colorDark"
                android:textSize="17sp"
                app:backgroundTint="@null"
                app:cornerRadius="8dp"
                app:icon="@drawable/right_arrow"
                app:iconTint="@color/colorPrimary" />
        </LinearLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>
